# $Id$

# Sympa - SYsteme de Multi-Postage Automatique
#
# Copyright (c) 1997, 1998, 1999 Institut Pasteur & Christophe Wolfhugel
# Copyright (c) 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005,
# 2006, 2007, 2008, 2009, 2010, 2011 Comite Reseau des Universites
# Copyright (c) 2011, 2012, 2013, 2014, 2015 GIP RENATER
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

nobase_static_DATA = \
	icons/back.png \
	icons/begin.png \
	icons/binary.png \
	icons/crosshairs.png \
	icons/down.png \
	icons/end.png \
	icons/favicon_sympa.png \
	icons/folder.open.png \
	icons/folder.png \
	icons/h.png \
	icons/image2.png \
	icons/junk.png \
	icons/left.png \
	icons/link.png \
	icons/locked.png \
	icons/logo-s-lock.png \
	icons/logo-s.png \
	icons/logo_sympa.png \
	icons/movie.png \
	icons/position.png \
	icons/right.png \
	icons/sound1.png \
	icons/sv.png \
	icons/text.png \
	icons/top.png \
	icons/unknown.png \
	icons/arc.png \
	icons/config.png \
	icons/datasources.png \
	icons/new_list.png \
	icons/search.png \
	icons/subscribe.png \
	icons/spinner.gif \
	external/jqplot.barRenderer.min.js \
	external/jqplot.CanvasAxisTickRenderer.js \
	external/jqplot.CanvasTextRenderer.js \
	external/jqplot.categoryAxisRenderer.min.js \
	external/jquery.jqplot.css \
	external/jquery.jqplot.min.js \
	external/jquery.js \
	external/jquery-ui.js \
	external/jquery-ui.css \
	external/images/ui-bg_flat_0_aaaaaa_40x100.png \
	external/images/ui-bg_flat_75_ffffff_40x100.png \
	external/images/ui-bg_glass_55_fbf9ee_1x400.png \
	external/images/ui-bg_glass_65_ffffff_1x400.png \
	external/images/ui-bg_glass_75_dadada_1x400.png \
	external/images/ui-bg_glass_75_e6e6e6_1x400.png \
	external/images/ui-bg_glass_95_fef1ec_1x400.png \
	external/images/ui-bg_highlight-soft_75_cccccc_1x100.png \
	external/images/ui-icons_222222_256x240.png \
	external/images/ui-icons_2e83ff_256x240.png \
	external/images/ui-icons_454545_256x240.png \
	external/images/ui-icons_888888_256x240.png \
	external/images/ui-icons_cd0a0a_256x240.png \
	js/sympa.js

EXTRA_DIST = $(nobase_static_DATA)
