# $Id$

# Sympa - SYsteme de Multi-Postage Automatique
#
# Copyright (c) 1997, 1998, 1999 Institut Pasteur & Christophe Wolfhugel
# Copyright (c) 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005,
# 2006, 2007, 2008, 2009, 2010, 2011 Comite Reseau des Universites
# Copyright (c) 2011, 2012, 2013, 2014, 2015, 2016, 2017 GIP RENATER
# Copyright 2018 The Sympa Community. See the AUTHORS.md file at the
# top-level directory of this distribution and at
# <https://github.com/sympa-community/sympa.git>.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

nobase_static_DATA = \
	fonts/font-awesome/css/font-awesome.css \
	fonts/font-awesome/css/font-awesome.min.css \
	fonts/font-awesome/fonts/FontAwesome.otf \
	fonts/font-awesome/fonts/fontawesome-webfont.eot \
	fonts/font-awesome/fonts/fontawesome-webfont.svg \
	fonts/font-awesome/fonts/fontawesome-webfont.ttf \
	fonts/font-awesome/fonts/fontawesome-webfont.woff \
	fonts/font-awesome/fonts/fontawesome-webfont.woff2 \
	fonts/foundation-icons/foundation-icons.css \
	fonts/foundation-icons/foundation-icons.eot \
	fonts/foundation-icons/foundation-icons.svg \
	fonts/foundation-icons/foundation-icons.ttf \
	fonts/foundation-icons/foundation-icons.woff \
	fonts/foundation-icons/preview.html \
	fonts/foundation-icons/svgs/fi-address-book.svg \
	fonts/foundation-icons/svgs/fi-alert.svg \
	fonts/foundation-icons/svgs/fi-align-center.svg \
	fonts/foundation-icons/svgs/fi-align-justify.svg \
	fonts/foundation-icons/svgs/fi-align-left.svg \
	fonts/foundation-icons/svgs/fi-align-right.svg \
	fonts/foundation-icons/svgs/fi-anchor.svg \
	fonts/foundation-icons/svgs/fi-annotate.svg \
	fonts/foundation-icons/svgs/fi-archive.svg \
	fonts/foundation-icons/svgs/fi-arrow-down.svg \
	fonts/foundation-icons/svgs/fi-arrow-left.svg \
	fonts/foundation-icons/svgs/fi-arrow-right.svg \
	fonts/foundation-icons/svgs/fi-arrows-compress.svg \
	fonts/foundation-icons/svgs/fi-arrows-expand.svg \
	fonts/foundation-icons/svgs/fi-arrows-in.svg \
	fonts/foundation-icons/svgs/fi-arrows-out.svg \
	fonts/foundation-icons/svgs/fi-arrow-up.svg \
	fonts/foundation-icons/svgs/fi-asl.svg \
	fonts/foundation-icons/svgs/fi-asterisk.svg \
	fonts/foundation-icons/svgs/fi-at-sign.svg \
	fonts/foundation-icons/svgs/fi-background-color.svg \
	fonts/foundation-icons/svgs/fi-battery-empty.svg \
	fonts/foundation-icons/svgs/fi-battery-full.svg \
	fonts/foundation-icons/svgs/fi-battery-half.svg \
	fonts/foundation-icons/svgs/fi-bitcoin-circle.svg \
	fonts/foundation-icons/svgs/fi-bitcoin.svg \
	fonts/foundation-icons/svgs/fi-blind.svg \
	fonts/foundation-icons/svgs/fi-bluetooth.svg \
	fonts/foundation-icons/svgs/fi-bold.svg \
	fonts/foundation-icons/svgs/fi-book-bookmark.svg \
	fonts/foundation-icons/svgs/fi-bookmark.svg \
	fonts/foundation-icons/svgs/fi-book.svg \
	fonts/foundation-icons/svgs/fi-braille.svg \
	fonts/foundation-icons/svgs/fi-burst-new.svg \
	fonts/foundation-icons/svgs/fi-burst-sale.svg \
	fonts/foundation-icons/svgs/fi-burst.svg \
	fonts/foundation-icons/svgs/fi-calendar.svg \
	fonts/foundation-icons/svgs/fi-camera.svg \
	fonts/foundation-icons/svgs/fi-checkbox.svg \
	fonts/foundation-icons/svgs/fi-check.svg \
	fonts/foundation-icons/svgs/fi-clipboard-notes.svg \
	fonts/foundation-icons/svgs/fi-clipboard-pencil.svg \
	fonts/foundation-icons/svgs/fi-clipboard.svg \
	fonts/foundation-icons/svgs/fi-clock.svg \
	fonts/foundation-icons/svgs/fi-closed-caption.svg \
	fonts/foundation-icons/svgs/fi-cloud.svg \
	fonts/foundation-icons/svgs/fi-comment-minus.svg \
	fonts/foundation-icons/svgs/fi-comment-quotes.svg \
	fonts/foundation-icons/svgs/fi-comments.svg \
	fonts/foundation-icons/svgs/fi-comment.svg \
	fonts/foundation-icons/svgs/fi-comment-video.svg \
	fonts/foundation-icons/svgs/fi-compass.svg \
	fonts/foundation-icons/svgs/fi-contrast.svg \
	fonts/foundation-icons/svgs/fi-credit-card.svg \
	fonts/foundation-icons/svgs/fi-crop.svg \
	fonts/foundation-icons/svgs/fi-crown.svg \
	fonts/foundation-icons/svgs/fi-css3.svg \
	fonts/foundation-icons/svgs/fi-database.svg \
	fonts/foundation-icons/svgs/fi-die-five.svg \
	fonts/foundation-icons/svgs/fi-die-four.svg \
	fonts/foundation-icons/svgs/fi-die-one.svg \
	fonts/foundation-icons/svgs/fi-die-six.svg \
	fonts/foundation-icons/svgs/fi-die-three.svg \
	fonts/foundation-icons/svgs/fi-die-two.svg \
	fonts/foundation-icons/svgs/fi-dislike.svg \
	fonts/foundation-icons/svgs/fi-dollar-bill.svg \
	fonts/foundation-icons/svgs/fi-dollar.svg \
	fonts/foundation-icons/svgs/fi-download.svg \
	fonts/foundation-icons/svgs/fi-eject.svg \
	fonts/foundation-icons/svgs/fi-elevator.svg \
	fonts/foundation-icons/svgs/fi-euro.svg \
	fonts/foundation-icons/svgs/fi-eye.svg \
	fonts/foundation-icons/svgs/fi-fast-forward.svg \
	fonts/foundation-icons/svgs/fi-female.svg \
	fonts/foundation-icons/svgs/fi-female-symbol.svg \
	fonts/foundation-icons/svgs/fi-filter.svg \
	fonts/foundation-icons/svgs/fi-first-aid.svg \
	fonts/foundation-icons/svgs/fi-flag.svg \
	fonts/foundation-icons/svgs/fi-folder-add.svg \
	fonts/foundation-icons/svgs/fi-folder-lock.svg \
	fonts/foundation-icons/svgs/fi-folder.svg \
	fonts/foundation-icons/svgs/fi-foot.svg \
	fonts/foundation-icons/svgs/fi-foundation.svg \
	fonts/foundation-icons/svgs/fi-graph-bar.svg \
	fonts/foundation-icons/svgs/fi-graph-horizontal.svg \
	fonts/foundation-icons/svgs/fi-graph-pie.svg \
	fonts/foundation-icons/svgs/fi-graph-trend.svg \
	fonts/foundation-icons/svgs/fi-guide-dog.svg \
	fonts/foundation-icons/svgs/fi-hearing-aid.svg \
	fonts/foundation-icons/svgs/fi-heart.svg \
	fonts/foundation-icons/svgs/fi-home.svg \
	fonts/foundation-icons/svgs/fi-html5.svg \
	fonts/foundation-icons/svgs/fi-indent-less.svg \
	fonts/foundation-icons/svgs/fi-indent-more.svg \
	fonts/foundation-icons/svgs/fi-info.svg \
	fonts/foundation-icons/svgs/fi-italic.svg \
	fonts/foundation-icons/svgs/fi-key.svg \
	fonts/foundation-icons/svgs/fi-laptop.svg \
	fonts/foundation-icons/svgs/fi-layout.svg \
	fonts/foundation-icons/svgs/fi-lightbulb.svg \
	fonts/foundation-icons/svgs/fi-like.svg \
	fonts/foundation-icons/svgs/fi-link.svg \
	fonts/foundation-icons/svgs/fi-list-bullet.svg \
	fonts/foundation-icons/svgs/fi-list-number.svg \
	fonts/foundation-icons/svgs/fi-list.svg \
	fonts/foundation-icons/svgs/fi-list-thumbnails.svg \
	fonts/foundation-icons/svgs/fi-lock.svg \
	fonts/foundation-icons/svgs/fi-loop.svg \
	fonts/foundation-icons/svgs/fi-magnifying-glass.svg \
	fonts/foundation-icons/svgs/fi-mail.svg \
	fonts/foundation-icons/svgs/fi-male-female.svg \
	fonts/foundation-icons/svgs/fi-male.svg \
	fonts/foundation-icons/svgs/fi-male-symbol.svg \
	fonts/foundation-icons/svgs/fi-map.svg \
	fonts/foundation-icons/svgs/fi-marker.svg \
	fonts/foundation-icons/svgs/fi-megaphone.svg \
	fonts/foundation-icons/svgs/fi-microphone.svg \
	fonts/foundation-icons/svgs/fi-minus-circle.svg \
	fonts/foundation-icons/svgs/fi-minus.svg \
	fonts/foundation-icons/svgs/fi-mobile-signal.svg \
	fonts/foundation-icons/svgs/fi-mobile.svg \
	fonts/foundation-icons/svgs/fi-monitor.svg \
	fonts/foundation-icons/svgs/fi-mountains.svg \
	fonts/foundation-icons/svgs/fi-music.svg \
	fonts/foundation-icons/svgs/fi-next.svg \
	fonts/foundation-icons/svgs/fi-no-dogs.svg \
	fonts/foundation-icons/svgs/fi-no-smoking.svg \
	fonts/foundation-icons/svgs/fi-page-add.svg \
	fonts/foundation-icons/svgs/fi-page-copy.svg \
	fonts/foundation-icons/svgs/fi-page-csv.svg \
	fonts/foundation-icons/svgs/fi-page-delete.svg \
	fonts/foundation-icons/svgs/fi-page-doc.svg \
	fonts/foundation-icons/svgs/fi-page-edit.svg \
	fonts/foundation-icons/svgs/fi-page-export-csv.svg \
	fonts/foundation-icons/svgs/fi-page-export-doc.svg \
	fonts/foundation-icons/svgs/fi-page-export-pdf.svg \
	fonts/foundation-icons/svgs/fi-page-export.svg \
	fonts/foundation-icons/svgs/fi-page-filled.svg \
	fonts/foundation-icons/svgs/fi-page-multiple.svg \
	fonts/foundation-icons/svgs/fi-page-pdf.svg \
	fonts/foundation-icons/svgs/fi-page-remove.svg \
	fonts/foundation-icons/svgs/fi-page-search.svg \
	fonts/foundation-icons/svgs/fi-page.svg \
	fonts/foundation-icons/svgs/fi-paint-bucket.svg \
	fonts/foundation-icons/svgs/fi-paperclip.svg \
	fonts/foundation-icons/svgs/fi-pause.svg \
	fonts/foundation-icons/svgs/fi-paw.svg \
	fonts/foundation-icons/svgs/fi-paypal.svg \
	fonts/foundation-icons/svgs/fi-pencil.svg \
	fonts/foundation-icons/svgs/fi-photo.svg \
	fonts/foundation-icons/svgs/fi-play-circle.svg \
	fonts/foundation-icons/svgs/fi-play.svg \
	fonts/foundation-icons/svgs/fi-play-video.svg \
	fonts/foundation-icons/svgs/fi-plus.svg \
	fonts/foundation-icons/svgs/fi-pound.svg \
	fonts/foundation-icons/svgs/fi-power.svg \
	fonts/foundation-icons/svgs/fi-previous.svg \
	fonts/foundation-icons/svgs/fi-pricetag-multiple.svg \
	fonts/foundation-icons/svgs/fi-price-tag.svg \
	fonts/foundation-icons/svgs/fi-print.svg \
	fonts/foundation-icons/svgs/fi-prohibited.svg \
	fonts/foundation-icons/svgs/fi-projection-screen.svg \
	fonts/foundation-icons/svgs/fi-puzzle.svg \
	fonts/foundation-icons/svgs/fi-quote.svg \
	fonts/foundation-icons/svgs/fi-record.svg \
	fonts/foundation-icons/svgs/fi-refresh.svg \
	fonts/foundation-icons/svgs/fi-results-demographics.svg \
	fonts/foundation-icons/svgs/fi-results.svg \
	fonts/foundation-icons/svgs/fi-rewind.svg \
	fonts/foundation-icons/svgs/fi-rewind-ten.svg \
	fonts/foundation-icons/svgs/fi-rss.svg \
	fonts/foundation-icons/svgs/fi-safety-cone.svg \
	fonts/foundation-icons/svgs/fi-save.svg \
	fonts/foundation-icons/svgs/fi-share.svg \
	fonts/foundation-icons/svgs/fi-sheriff-badge.svg \
	fonts/foundation-icons/svgs/fi-shield.svg \
	fonts/foundation-icons/svgs/fi-shopping-bag.svg \
	fonts/foundation-icons/svgs/fi-shopping-cart.svg \
	fonts/foundation-icons/svgs/fi-shuffle.svg \
	fonts/foundation-icons/svgs/fi-skull.svg \
	fonts/foundation-icons/svgs/fi-social-500px.svg \
	fonts/foundation-icons/svgs/fi-social-adobe.svg \
	fonts/foundation-icons/svgs/fi-social-amazon.svg \
	fonts/foundation-icons/svgs/fi-social-android.svg \
	fonts/foundation-icons/svgs/fi-social-apple.svg \
	fonts/foundation-icons/svgs/fi-social-behance.svg \
	fonts/foundation-icons/svgs/fi-social-bing.svg \
	fonts/foundation-icons/svgs/fi-social-blogger.svg \
	fonts/foundation-icons/svgs/fi-social-delicious.svg \
	fonts/foundation-icons/svgs/fi-social-designer-news.svg \
	fonts/foundation-icons/svgs/fi-social-deviant-art.svg \
	fonts/foundation-icons/svgs/fi-social-digg.svg \
	fonts/foundation-icons/svgs/fi-social-dribbble.svg \
	fonts/foundation-icons/svgs/fi-social-drive.svg \
	fonts/foundation-icons/svgs/fi-social-dropbox.svg \
	fonts/foundation-icons/svgs/fi-social-evernote.svg \
	fonts/foundation-icons/svgs/fi-social-facebook.svg \
	fonts/foundation-icons/svgs/fi-social-flickr.svg \
	fonts/foundation-icons/svgs/fi-social-forrst.svg \
	fonts/foundation-icons/svgs/fi-social-foursquare.svg \
	fonts/foundation-icons/svgs/fi-social-game-center.svg \
	fonts/foundation-icons/svgs/fi-social-github.svg \
	fonts/foundation-icons/svgs/fi-social-google-plus.svg \
	fonts/foundation-icons/svgs/fi-social-hacker-news.svg \
	fonts/foundation-icons/svgs/fi-social-hi5.svg \
	fonts/foundation-icons/svgs/fi-social-instagram.svg \
	fonts/foundation-icons/svgs/fi-social-joomla.svg \
	fonts/foundation-icons/svgs/fi-social-lastfm.svg \
	fonts/foundation-icons/svgs/fi-social-linkedin.svg \
	fonts/foundation-icons/svgs/fi-social-medium.svg \
	fonts/foundation-icons/svgs/fi-social-myspace.svg \
	fonts/foundation-icons/svgs/fi-social-orkut.svg \
	fonts/foundation-icons/svgs/fi-social-path.svg \
	fonts/foundation-icons/svgs/fi-social-picasa.svg \
	fonts/foundation-icons/svgs/fi-social-pinterest.svg \
	fonts/foundation-icons/svgs/fi-social-rdio.svg \
	fonts/foundation-icons/svgs/fi-social-reddit.svg \
	fonts/foundation-icons/svgs/fi-social-skillshare.svg \
	fonts/foundation-icons/svgs/fi-social-skype.svg \
	fonts/foundation-icons/svgs/fi-social-smashing-mag.svg \
	fonts/foundation-icons/svgs/fi-social-snapchat.svg \
	fonts/foundation-icons/svgs/fi-social-spotify.svg \
	fonts/foundation-icons/svgs/fi-social-squidoo.svg \
	fonts/foundation-icons/svgs/fi-social-stack-overflow.svg \
	fonts/foundation-icons/svgs/fi-social-steam.svg \
	fonts/foundation-icons/svgs/fi-social-stumbleupon.svg \
	fonts/foundation-icons/svgs/fi-social-treehouse.svg \
	fonts/foundation-icons/svgs/fi-social-tumblr.svg \
	fonts/foundation-icons/svgs/fi-social-twitter.svg \
	fonts/foundation-icons/svgs/fi-social-vimeo.svg \
	fonts/foundation-icons/svgs/fi-social-windows.svg \
	fonts/foundation-icons/svgs/fi-social-xbox.svg \
	fonts/foundation-icons/svgs/fi-social-yahoo.svg \
	fonts/foundation-icons/svgs/fi-social-yelp.svg \
	fonts/foundation-icons/svgs/fi-social-youtube.svg \
	fonts/foundation-icons/svgs/fi-social-zerply.svg \
	fonts/foundation-icons/svgs/fi-social-zurb.svg \
	fonts/foundation-icons/svgs/fi-sound.svg \
	fonts/foundation-icons/svgs/fi-star.svg \
	fonts/foundation-icons/svgs/fi-stop.svg \
	fonts/foundation-icons/svgs/fi-strikethrough.svg \
	fonts/foundation-icons/svgs/fi-subscript.svg \
	fonts/foundation-icons/svgs/fi-superscript.svg \
	fonts/foundation-icons/svgs/fi-tablet-landscape.svg \
	fonts/foundation-icons/svgs/fi-tablet-portrait.svg \
	fonts/foundation-icons/svgs/fi-target.svg \
	fonts/foundation-icons/svgs/fi-target-two.svg \
	fonts/foundation-icons/svgs/fi-telephone-accessible.svg \
	fonts/foundation-icons/svgs/fi-telephone.svg \
	fonts/foundation-icons/svgs/fi-text-color.svg \
	fonts/foundation-icons/svgs/fi-thumbnails.svg \
	fonts/foundation-icons/svgs/fi-ticket.svg \
	fonts/foundation-icons/svgs/fi-torso-business.svg \
	fonts/foundation-icons/svgs/fi-torso-female.svg \
	fonts/foundation-icons/svgs/fi-torsos-all-female.svg \
	fonts/foundation-icons/svgs/fi-torsos-all.svg \
	fonts/foundation-icons/svgs/fi-torsos-female-male.svg \
	fonts/foundation-icons/svgs/fi-torsos-male-female.svg \
	fonts/foundation-icons/svgs/fi-torsos.svg \
	fonts/foundation-icons/svgs/fi-torso.svg \
	fonts/foundation-icons/svgs/fi-trash.svg \
	fonts/foundation-icons/svgs/fi-trees.svg \
	fonts/foundation-icons/svgs/fi-trophy.svg \
	fonts/foundation-icons/svgs/fi-underline.svg \
	fonts/foundation-icons/svgs/fi-universal-access.svg \
	fonts/foundation-icons/svgs/fi-unlink.svg \
	fonts/foundation-icons/svgs/fi-unlock.svg \
	fonts/foundation-icons/svgs/fi-upload-cloud.svg \
	fonts/foundation-icons/svgs/fi-upload.svg \
	fonts/foundation-icons/svgs/fi-usb.svg \
	fonts/foundation-icons/svgs/fi-video.svg \
	fonts/foundation-icons/svgs/fi-volume-none.svg \
	fonts/foundation-icons/svgs/fi-volume-strike.svg \
	fonts/foundation-icons/svgs/fi-volume.svg \
	fonts/foundation-icons/svgs/fi-web.svg \
	fonts/foundation-icons/svgs/fi-wheelchair.svg \
	fonts/foundation-icons/svgs/fi-widget.svg \
	fonts/foundation-icons/svgs/fi-wrench.svg \
	fonts/foundation-icons/svgs/fi-x-circle.svg \
	fonts/foundation-icons/svgs/fi-x.svg \
	fonts/foundation-icons/svgs/fi-yen.svg \
	fonts/foundation-icons/svgs/fi-zoom-in.svg \
	fonts/foundation-icons/svgs/fi-zoom-out.svg \
	fonts/Raleway/OFL.txt \
	fonts/Raleway/Raleway-Regular.otf \
	icons/crosshairs.png \
	icons/favicon_sympa.png \
	icons/h.png \
	icons/logo_sympa.png \
	icons/position.png \
	icons/sv.png \
	js/foundation/css/foundation-float.css \
	js/foundation/css/foundation-float.min.css \
	js/foundation/js/foundation.js \
	js/foundation/js/foundation.min.js \
	js/foundation/js/vendor/what-input.js \
	js/html5shiv/html5shiv.js \
	js/jqplot/jqplot.barRenderer.min.js \
	js/jqplot/jqplot.canvasAxisTickRenderer.min.js \
	js/jqplot/jqplot.canvasTextRenderer.min.js \
	js/jqplot/jqplot.categoryAxisRenderer.min.js \
	js/jqplot/jquery.jqplot.css \
	js/jqplot/jquery.jqplot.min.js \
	js/jquery.js \
	js/jquery-migrate.js \
	js/jquery-ui/images/ui-bg_flat_0_aaaaaa_40x100.png \
	js/jquery-ui/images/ui-bg_flat_75_ffffff_40x100.png \
	js/jquery-ui/images/ui-bg_glass_55_fbf9ee_1x400.png \
	js/jquery-ui/images/ui-bg_glass_65_ffffff_1x400.png \
	js/jquery-ui/images/ui-bg_glass_75_dadada_1x400.png \
	js/jquery-ui/images/ui-bg_glass_75_e6e6e6_1x400.png \
	js/jquery-ui/images/ui-bg_glass_95_fef1ec_1x400.png \
	js/jquery-ui/images/ui-bg_highlight-soft_75_cccccc_1x100.png \
	js/jquery-ui/images/ui-icons_222222_256x240.png \
	js/jquery-ui/images/ui-icons_2e83ff_256x240.png \
	js/jquery-ui/images/ui-icons_444444_256x240.png \
	js/jquery-ui/images/ui-icons_454545_256x240.png \
	js/jquery-ui/images/ui-icons_555555_256x240.png \
	js/jquery-ui/images/ui-icons_777620_256x240.png \
	js/jquery-ui/images/ui-icons_777777_256x240.png \
	js/jquery-ui/images/ui-icons_888888_256x240.png \
	js/jquery-ui/images/ui-icons_cc0000_256x240.png \
	js/jquery-ui/images/ui-icons_cd0a0a_256x240.png \
	js/jquery-ui/images/ui-icons_ffffff_256x240.png \
	js/jquery-ui/jquery-ui.css \
	js/jquery-ui/jquery-ui.js \
	js/respondjs/respond.min.js \
	js/sympa.js

EXTRA_DIST = $(nobase_static_DATA)

install-data-hook:
	@echo "Creating static_content directory"
	-@for dir in $(staticdir); do \
		if [ ! -d $(DESTDIR)$$dir ] ; then \
			echo "Creating $(DESTDIR)$$dir"; \
			$(INSTALL) -d -m 644 $(DESTDIR)$$dir; \
		fi; \
	done
	@echo "Creating writable directories"
	-@for dir in $(cssdir) $(picturesdir); do \
		if [ ! -d $(DESTDIR)$$dir ] ; then \
			echo "Creating $(DESTDIR)$$dir"; \
			$(INSTALL) -d -m 755 $(DESTDIR)$$dir; \
		fi; \
		chown $(USER) $(DESTDIR)$$dir; \
		chgrp $(GROUP) $(DESTDIR)$$dir; \
	done

